0027530: Visualization - AIS_InteractiveContext::HilightNextDetected() doesn't work in Neutral Point

- added implementation of mentioned methods for neutral point;
- sequence of detected objects was replaced by sequence of detected owner's indexes in AIS_InteractiveContext;
- commands vselnext and vselprev were corrected to update viewer properly;
- test case for issue #27530.